# AviSynth-hqdn3d

./: CMakeLists.txt  Changelog  README.md  hqdn3d.txt
msvc/: hqdn3d.sln  hqdn3d.vcxproj  hqdn3d.vcxproj.filters
src/: avisynth.h  hqdn3d.cpp  hqdn3d.dsp  hqdn3d.dsw  hqdn3d.rc  internal.h
